<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/textView2A2"
      android:layout_width="69dp"
      android:layout_height="28dp"
      android:layout_marginTop="112dp"
      android:text="@string/txtNumber2"
      app:layout_constraintEnd_toStartOf="@+id/editA2num2"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewA2" />

  <EditText
      android:id="@+id/editA2num1"
      android:layout_width="219dp"
      android:layout_height="59dp"
      android:ems="10"
      android:hint="@string/Number"
      android:inputType="number"
      app:layout_constraintBaseline_toBaselineOf="@+id/textViewA2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/textViewA2" />

  <TextView
      android:id="@+id/textViewA2"
      android:layout_width="70dp"
      android:layout_height="32dp"
      android:layout_marginTop="132dp"
      android:text="@string/txtNumber1"
      app:layout_constraintEnd_toStartOf="@+id/editA2num1"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editA2num2"
      android:layout_width="219dp"
      android:layout_height="70dp"
      android:ems="10"
      android:hint="@string/Number"
      android:inputType="number"
      app:layout_constraintBaseline_toBaselineOf="@+id/textView2A2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/textView2A2" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="168dp"
      android:onClick="multipication"
      android:text="@string/multu"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/button4"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button3"
      app:layout_constraintVertical_bias="1.0" />

  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="substraction"
      android:text="@string/minus"
      app:layout_constraintBaseline_toBaselineOf="@+id/button3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/button3" />

  <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="addition"
      android:text="@string/Addition"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/button2"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2A2"
      app:layout_constraintVertical_bias="0.306" />

  <Button
      android:id="@+id/button4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="devision"
      android:text="@string/devision"
      app:layout_constraintBaseline_toBaselineOf="@+id/button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/button" />

  <TextView
      android:id="@+id/msg"
      android:layout_width="101dp"
      android:layout_height="48dp"
      app:layout_constraintBottom_toTopOf="@+id/button3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2A2"
      app:layout_constraintVertical_bias="0.72" />


</androidx.constraintlayout.widget.ConstraintLayout>